# poetry-template

./: .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements.txt
{{ cookiecutter.project_name }}/: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_name }}/tests/: test_example.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/: __init__.py  example.py
